added loading and saving

--- a/recursivePipelineCreator/index.html
+++ b/recursivePipelineCreator/index.html
@@ -11,6 +11,9 @@
         <div class="top-controls">
             <input type="text" id="apiKey" placeholder="Enter API Key">
             <button id="runPipeline">Run Pipeline</button>
+            <button id="downloadState">💾 Save</button>
+            <button id="loadState">📂 Load</button>
+            <input type="file" id="loadFile" style="display: none">
         </div>
         <div class="unit-controls">
             <button class="unit-btn" data-type="input">Input</button>
