added the ability to export script although hasnt been properly tested.

--- a/recursivePipelineCreator/index.html
+++ b/recursivePipelineCreator/index.html
@@ -12,6 +12,7 @@
             <input type="text" id="apiKey" placeholder="Enter API Key">
             <button id="runPipeline">Run Pipeline</button>
             <button id="downloadState">💾 Save</button>
+            <button id="downloadScript">📜 Export Script</button>
             <button id="loadState">📂 Load</button>
             <input type="file" id="loadFile" style="display: none">
         </div>
