added a server script so i can use R1

--- a/recursivePipelineCreator/index.html
+++ b/recursivePipelineCreator/index.html
@@ -15,6 +15,7 @@
             <button id="downloadScript">📜 Export Script</button>
             <button id="loadState">📂 Load</button>
             <input type="file" id="loadFile" style="display: none">
+            <label><input type="checkbox" id="useR1"> Use R1</label>
         </div>
         <div class="unit-controls">
             <button class="unit-btn" data-type="input">Input</button>
